// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component renders correctly 1`] = `
<div>
  <div
    class="fixed flex flex-row justify-between items-center border-top border-t-2 border-secondary h-rd shadow ease-out duration-300 w-full"
  >
    <div
      class="w-full flex justify-center"
    >
      <div
        class="flex justify-between items-center gap-4"
      >
        <svg
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 13L9 17L19 7"
            stroke="#33A6BA"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <div
          class="font-normal font-5xl font-info"
          role="maintext"
        >
          The Location has been updated
        </div>
      </div>
    </div>
    <div
      class="mr-8 cursor-pointer"
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 15 14"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.16406 13L13.4928 1L1.16406 13ZM1.16406 1L13.4928 13L1.16406 1Z"
          fill="#989EA7"
        />
        <path
          d="M1.16406 1L13.4928 13M1.16406 13L13.4928 1L1.16406 13Z"
          stroke="#989EA7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Index Page renders correctly 1`] = `
<div>
  <div
    class="fixed flex flex-row justify-between items-center border-top border-t-2 border-secondary h-rd shadow ease-out duration-300 w-full"
  >
    <div
      class="w-full flex justify-center"
    >
      <div
        class="flex justify-between items-center gap-4"
      >
        <svg
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 13L9 17L19 7"
            stroke="#33A6BA"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <div
          class="font-normal font-5xl font-info"
        >
          The Location has been updated
        </div>
      </div>
    </div>
    <div
      class="mr-8 cursor-pointer"
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 15 14"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.16406 13L13.4928 1L1.16406 13ZM1.16406 1L13.4928 13L1.16406 1Z"
          fill="#989EA7"
        />
        <path
          d="M1.16406 1L13.4928 13M1.16406 13L13.4928 1L1.16406 13Z"
          stroke="#989EA7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;
